fixed fonts on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -166,13 +166,13 @@ h2 {
     .tiny-day,
     .tiny-temp,
     .tiny-humid {
-        font-size: 25px;
+        font-size: 20px;
     }
     .tiny-icon {
         width: 150px;
     }
     #weather-icon {
-        width: 150px;
+        width: 175px;
     }
   }
 
